--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,13 @@
-<my-app>loading</my-app>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Demo</title>
+  <base href="/" />
+  <!-- Added Inter font (Step 1) -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <my-app>loading</my-app>
+</body>
+</html>
